# ur_experiments

./: fastdds_pro.xml  readme.md
control_pkg/: CMakeLists.txt  package.xml
control_pkg/config/: rc_real_pose_real_push.ini  real_hand_follow.ini  real_pose_real_push.ini  real_pose_real_push_copy.ini
control_pkg/src/: rcvc_sub_ur3e.cpp  rcvc_sub_ur5e.cpp  real_cartesian_velocity_controller_ur3e.cpp
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: CompressedImageStampId.msg  ImageStampId.msg  PoseCommunication.msg  PoseSensing.msg  PosesStampId.msg  Sync.msg  VelDir.msg
custom_interfaces/srv/: ImageStampIdSrv.srv  ObjPose.srv  PoseDetection.srv  PoseSensingSettings.srv  ResetPoses.srv  RobConf.srv  RobPose.srv  SetObjId.srv  SetRandomization.srv  TimeMeasurement.srv  Urik.srv
experiment_pkg/: package.xml  setup.cfg  setup.py
experiment_pkg/experiment_pkg/: a1_compressed_image_publisher.py  a1_image_publisher.py  a2_aruco_detection.py  a2_compressed_aruco_detection.py  a2_hand_detection.py  a3_hand_pose_subscriber.py  a3_pose_subscriber.py  cad_match_pose_client.py  cad_match_real_pose_real_push.py  linear_motion.py  linear_motion_pub.py  qos_profiles.py  rc_pose_client.py  rc_real_pose_real_push.py  real_hand_follow.py  real_pose_real_push.py
hand_follow/: package.xml  setup.cfg  setup.py
hand_follow/hand_follow/: a2_hand_detection.py  real_hand_follow_ur3e.py
